syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";
import "AbilityControlBlock.proto";


message AbilityChangeNotify {
	uint32 entity_id = 5;
	AbilityControlBlock ability_control_block = 10;
}