syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message AvatarRenameInfo {
	string avatar_name = 6;
	uint32 avatar_id = 2;
}