syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message ShortAbilityHashPair {
	sfixed32 ability_config_hash = 1;
	sfixed32 ability_name_hash = 2;
}